dex/independent/dex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dex
  name: dex
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      name: dex
  template:
    metadata:
      labels:
        name: dex
      name: dex
    spec:
      containers:
      - command: ["/usr/local/bin/dex","serve","/dex-config/dex-config.yaml"]
        image: registry.redhat.io/openshift-gitops-1/dex-rhel8@sha256:9116e1adc24db19136ea34b8faeba3b1003228621d81b716cbe4ec4d61ad6ffd
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz/live
            port: 5558
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        name: dex
        ports:
        - containerPort: 5556
          name: http
          protocol: TCP
        - containerPort: 5557
          name: grpc
          protocol: TCP
        - containerPort: 5558
          name: metrics
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 250m
            memory: 128Mi
        volumeMounts:
        - mountPath: /dex-cert
          name: dex-cert
        - mountPath: /dex-config
          name: dex-config
        - name: trusted-ca
          mountPath: /etc/pki/ca-trust/extracted/pem
          readOnly: true
      schedulerName: default-scheduler
      volumes:
      - name: dex-config
        configMap:
          defaultMode: 420
          name: dex-config-ind
      - name: dex-cert
        secret:
          defaultMode: 420
          secretName: dex-cert
      - name: trusted-ca
        configMap:
          name: ca-bundle
          items:
            - key: ca-bundle.crt 
              path: tls-ca-bundle.pem
