dex/independent/spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-dex-ind
    app.kubernetes.io/component: spring-dex-ind
    app.kubernetes.io/instance: spring-dex-ind
  name: spring-dex-ind
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: spring-dex-ind
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: spring-dex-ind
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/test/spring-boot@sha256:3480e2d8f19b2353606b97574599e5fb2ea66d0b1658fe1a1e09a8df4be8056a
        imagePullPolicy: IfNotPresent
        name: spring-dex-ind
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
