dex/independent/dex-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dex
  name: dex
  namespace: test
spec:
  ports:
  - name: port-5556
    port: 5556
    protocol: TCP
    targetPort: 5556
  - name: port-5557
    port: 5557
    protocol: TCP
    targetPort: 5557
  - name: port-5558
    port: 5558
    protocol: TCP
    targetPort: 5558
  selector:
    name: dex
  type: ClusterIP
