dex/independent/dex-route-passthrough.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: dex
  name: dex-ind
  namespace: test
spec:
  host: dex-test.apps.barp.opencontainer.io
  port:
    targetPort: port-5556
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: dex
    weight: 100
  wildcardPolicy: None
