dex/independent/spring-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: spring-dex-ind
    app.kubernetes.io/component: spring-dex-ind
    app.kubernetes.io/instance: spring-dex-ind
  name: spring-dex-ind
  namespace: test
spec:
  host: spring-dex-ind.apps.barp.opencontainer.io
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: None
    termination: edge
  to:
    kind: Service
    name: spring-dex-ind
    weight: 100
  wildcardPolicy: None
